Finished the CSS for the Img Search page. The Google logo is a bit off center but compared to the standard search page but idk how to fix that.

--- a/index.css
+++ b/index.css
@@ -43,6 +43,14 @@ body {
   color: #DB4437;
 }
 
+#imgs {
+  font-size: 15px;
+  color: #6cb9fa;
+  position: relative;
+  top: 40px;
+  right: 70px;
+}
+
 /* CSS for the form.*/
 .form {
   /* Adjusting the positioning of the form.*/
