--- a/links.scss
+++ b/links.scss
@@ -15,3 +15,11 @@
     }
 }
 
+#imgs{
+    font-size: 15px;
+    color: #6cb9fa;
+    
+    position: relative;
+    top: 40px;
+    right: 70px;
+}
